--- a/src/WebApi/wwwroot/index.html
+++ b/src/WebApi/wwwroot/index.html
@@ -5,7 +5,7 @@
     <link href="\js\lib\bootstrap\dist\css\bootstrap.css" rel="stylesheet" />
     <link href="css/appTheme.css" rel="stylesheet" />
     <link href="js/lib/toastr/toastr.css" rel="stylesheet" />
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="css/site.css" type="text/css" rel="stylesheet" />
 </head>
 <body class="container">
     <my-app></my-app>
