--- a/src/WebApi/wwwroot/index.html
+++ b/src/WebApi/wwwroot/index.html
@@ -6,10 +6,10 @@
     <link href="css/appTheme.css" rel="stylesheet" />
     <link href="js/lib/toastr/toastr.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
+    <link rel="stylesheet" href="js/lib/jqcloud2/dist/jqcloud.min.css">
 </head>
 <body class="container">
     <my-app></my-app>
-
     <script data-main="js/app/main.js" src="js/lib/requirejs/require.js"></script>
 </body>
 </html>
