--- a/src/WebApi/wwwroot/index.html
+++ b/src/WebApi/wwwroot/index.html
@@ -8,7 +8,7 @@
     <link href="css/site.css" rel="stylesheet" />
     <link rel="stylesheet" href="js/lib/jqcloud2/dist/jqcloud.min.css">
 </head>
-<body class="container">
+<body class="container-fluid">
     <my-app></my-app>
     <script data-main="js/app/main.js" src="js/lib/requirejs/require.js"></script>
 </body>
