Final version (cross checked)

--- a/src/WebApi/wwwroot/index.html
+++ b/src/WebApi/wwwroot/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>index</title>
-    <link href="js/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/js/lib/boostrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/appTheme.css" rel="stylesheet" />
-    <link href="js/lib/toastr/toastr.css" rel="stylesheet" />
+    <link href="/js/lib/toastr/toastr.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
     <link rel="stylesheet" href="js/lib/jqcloud2/dist/jqcloud.min.css">
 </head>
